k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sphere-gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sphere-gateway
  template:
    metadata:
      labels:
        app: sphere-gateway
    spec:
      containers:
        - name: sphere-gateway
          image: europe-west2-docker.pkg.dev/sphere-gateway-demo/sphere-images/sphere-gateway:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
