k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sphere-gateway
  annotations:
    cloud.google.com/backend-config: '{"default": "sphere-backend-config"}'
spec:
  type: LoadBalancer
  selector:
    app: sphere-gateway
  ports:
    - port: 3000
      targetPort: 3000
